updated readme and changed formatting of sections

--- a/index.html
+++ b/index.html
@@ -109,6 +109,22 @@
 									<div class="content">
                                         <!--https://bl.ocks.org/mbhall88/b2504f8f3e384de4ff2b9dfa60f325e2-->
 										<h2 class="major">Number of Riders per Pass Type</h2>
+
+                                        <div style="text-align: center;"><i><h3 id = "totalBikers"></h3></i></div>
+
+                                        <!--<div style="text-align: center;"><i><h3 id = "regBikers" style = "font-size: 30px"></h3></i></div>-->
+
+                                        <!--<section class="features">-->
+                                            <!--<article>-->
+                                                <!--<div style="text-align: center;"><h3 class="major">Total Number of Riders</h3></div>-->
+                                                <!--<div style="text-align: center;"><i><p id = "totalBikers" style = "font-size: 30px"></p></i></div>-->
+                                            <!--</article>-->
+                                            <!--<article>-->
+                                                <!--<div style="text-align: center;"><h3 class="major">Number of Regular Riders</h3></div>-->
+                                                <!--<div style="text-align: center;"><i><p id = "regBikers" style = "font-size: 30px"></p></i></div>-->
+                                            <!--</article>-->
+                                        <!--</section>-->
+
                                         <div id="pieChart"></div>
 										<p id = "regRidersDescription"></p>
 									</div>
@@ -138,7 +154,6 @@
                                             <div style="text-align: center;"><h3 class="major">Average Round Trip Distance</h3></div>
                                             <div style="text-align: center;"><i><p id = "distRoundTripKm" style = "font-size: 30px"></p></i></div>
                                         </article>
-
                                     </section>
                                     <i><h3 id = "avgCombinedDist" style = "text-align:center;font-size: 30px;"></h3></i>
                                 </div>
